zero-trust-policies.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: securekube-app
spec:
  {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-payment-to-api
  namespace: securekube-app
spec:
  selector:
    matchLabels:
      app: securekube-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/securekube-app/sa/default"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/transaction", "/health"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-api-to-db
  namespace: securekube-app
spec:
  selector:
    matchLabels:
      app: securekube-db
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/securekube-app/sa/api-sa"]
      to:
        - operation:
            ports: ["5432"]
